// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. macros: 1. macros 1`] = `
"
import className from '../unique-classname.macro'

const abc = className()
const def = className()

      ↓ ↓ ↓ ↓ ↓ ↓

const abc = \\"abc-1u6x1nq\\";
const def = \\"def-9c4qu0\\";
"
`;

exports[`macros 1. macros: 1. macros 2`] = `
"
import className from '../unique-classname.macro'

const abc = className()
const def = className('something')

      ↓ ↓ ↓ ↓ ↓ ↓

const abc = \\"abc-1u6x1nq\\";
const def = \\"something-xpowsb\\";
"
`;

exports[`macros 1. macros: 1. macros 3`] = `
"
import className from '../unique-classname.macro'

const abc = className('something')
const def = className('something')

      ↓ ↓ ↓ ↓ ↓ ↓

const abc = \\"something-xpowsb\\";
const def = \\"something-1phojss\\";
"
`;
